tests/sumo/tls/NEMA/errors/1_ignore/tls_program.sumo
<?xml version="1.0" encoding="UTF-8"?>


<additional xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/additional_file.xsd">
    <tlLogic id="2881" type="static" programID="NEMA">
        <phase duration="11.00" state="grrrrGGrrGGG" name="2+6"/>
        <phase duration="4.00"  state="yrrrryyrryyy" name="2+6"/>
        <phase duration="1.00"  state="rrrrrrrrrrrr" name="2+6"/>
        <phase duration="16.00" state="GGGGGrrrrrrr" name="4+4"/>
        <phase duration="4.00"  state="yyyyyrrrrrrr" name="4+4"/>
        <phase duration="2.00"  state="rrrrrrrrrrrr" name="4+4"/>
        <phase duration="15.00" state="grrrrGGGGrrr" name="1+6"/>
        <phase duration="4.00"  state="grrrrGGyyrrr" name="1+6"/>
        <phase duration="1.00"  state="grrrrGGrrrrr" name="1+6"/>
        <phase duration="73.00" state="grrrrGGrrGGG" name="2+6"/>
        <phase duration="4.00"  state="yrrrryyrryyy" name="2+6"/>
        <phase duration="1.00"  state="rrrrrrrrrrrr" name="2+6"/>
        <phase duration="16.00" state="GGGGGrrrrrrr" name="4+4"/>
        <phase duration="4.00"  state="yyyyyrrrrrrr" name="4+4"/>
        <phase duration="2.00"  state="rrrrrrrrrrrr" name="4+4"/>
        <phase duration="15.00" state="grrrrGGGGrrr" name="1+6"/>
        <phase duration="4.00"  state="grrrrGGyyrrr" name="1+6"/>
        <phase duration="1.00"  state="grrrrGGrrrrr" name="1+6"/>
        <phase duration="73.00" state="grrrrGGrrGGG" name="2+6"/>
        <phase duration="4.00"  state="yrrrryyrryyy" name="2+6"/>
        <phase duration="1.00"  state="rrrrrrrrrrrr" name="2+6"/>
        <phase duration="16.00" state="GGGGGrrrrrrr" name="4+4"/>
        <phase duration="4.00"  state="yyyyyrrrrrrr" name="4+4"/>
        <phase duration="2.00"  state="rrrrrrrrrrrr" name="4+4"/>
        <phase duration="15.00" state="grrrrGGGGrrr" name="1+6"/>
        <phase duration="4.00"  state="grrrrGGyyrrr" name="1+6"/>
        <phase duration="1.00"  state="grrrrGGrrrrr" name="1+6"/>
        <phase duration="73.00" state="grrrrGGrrGGG" name="2+6"/>
        <phase duration="4.00"  state="yrrrryyrryyy" name="2+6"/>
        <phase duration="1.00"  state="rrrrrrrrrrrr" name="2+6"/>
        <phase duration="16.00" state="GGGGGrrrrrrr" name="4+4"/>
        <phase duration="4.00"  state="yyyyyrrrrrrr" name="4+4"/>
        <phase duration="2.00"  state="rrrrrrrrrrrr" name="4+4"/>
        <phase duration="15.00" state="grrrrGGGGrrr" name="1+6"/>
        <phase duration="4.00"  state="grrrrGGyyrrr" name="1+6"/>
        <phase duration="1.00"  state="grrrrGGrrrrr" name="1+6"/>
        <phase duration="73.00" state="grrrrGGrrGGG" name="2+6"/>
        <phase duration="4.00"  state="yrrrryyrryyy" name="2+6"/>
        <phase duration="1.00"  state="rrrrrrrrrrrr" name="2+6"/>
        <phase duration="4.00"  state="GGGGGrrrrrrr" name="4+4"/>
    </tlLogic>
</additional>
